<resources>
    <string name="app_name">FOODEZE</string>
    <string name="getStarted">GETSTARTED</string>

    <string name="intro1Heading">Search Your Location</string>
    <string name="intro1Desc">We make it simple to find the food you crave. Enter your address and let us do the rest.</string>

    <string name="intro2Heading">Select A Restaurant</string>
    <string name="intro2Desc">When you order foodeze, we\'ll hook you  up with affordable home cooked meals for the day, week or mont. </string>
    <string name="intro3Heading">Order Food Online</string>
    <string name="intro3Desc">We make food ordering fast, simple and free-no-matter if you order online or cash.</string>
    <string name="restrau">Kitchen</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="event">Events</string>
    <string name="profile">Profile</string>

</resources>
