<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">




    <item
        android:enabled="true"
        android:id="@+id/home"
        android:icon="@drawable/resrau_icon"
        android:title="@string/restrau" />

    <item
        android:enabled="true"
        android:id="@+id/orders"
        android:icon="@drawable/order_icon"
        android:title="@string/order" />

    <item
        android:enabled="true"
        android:id="@+id/carts"
        android:icon="@drawable/cart_icon"
        android:title="@string/cart" />

    <item
        android:enabled="true"
        android:id="@+id/events"
        android:icon="@drawable/event_icon"
        android:title="@string/event" />


 <item
        android:enabled="true"
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />



</menu>
